fix(tables): make overflowing tables scroll horizontally

--- a/src/assets/styles/_extensions.scss
+++ b/src/assets/styles/_extensions.scss
@@ -40,3 +40,10 @@ a {
     }
   }
 }
+
+// Set table as block
+
+table {
+  display: block;
+  overflow-x: auto;
+}
